--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
 
 <body>
     <div class="container">
-   
+        <header>
+        <div class="header">
+
+                <img src="img/lambda-black.png" alt="lambda logo"/>
+
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="#">Products</a>
+                    <a href="#"> Blog</a>
+                    <a href="#">Contact</a>
+        </div>
+        </header>
+        
+        <div class="jumbotron"> 
+            <img src="img/jumbo.jpg" alt="jumbo image"/>
+        </div>
+        
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
@@ -64,7 +80,7 @@
         <footer>
             <nav>
                 <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
